--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Disease Probability Checker</title>
+<title>জ্বীন রুকাইয়া চেকার</title>
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <div class="container">
-    <h1>Disease Probability Checker</h1>
+    <h1>জ্বীন রুকাইয়া চেকার</h1>
     <form id="quizForm">
         <!-- Questions will be generated dynamically -->
     </form>
-    <button onclick="submitQuiz()">Submit Answers</button>
+    <button onclick="submitQuiz()">সাবমিট করুন </button>
     <div id="result"></div>
     <ul id="responseList"></ul>
 </div>
