--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <button onclick="submitQuiz()">সাবমিট করুন </button>
     <div id="result"></div>
     <ul id="responseList"></ul>
+    <ul class="List">
+        <li>প্রথমত সুরা ফালাক, সুরা নাস ও আয়াতুল কুরসী দিয়ে রুকাইয়া করুন।</li>
+        <li>যদি তাতেও না হয় একজন রাকীর কাছে রুকাইয়া নিন।</li>
+    </ul>
 </div>
 
 <script src="script.js"></script>
