--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     <div id="result"></div>
     <ul id="responseList"></ul>
     <ul class="List">
-        <li>✅ প্রথমত সুরা ফালাক, সুরা নাস ও আয়াতুল কুরসী দিয়ে রুকাইয়া করুন।</li>
-        <li>✅ যদি তাতেও না হয় একজন রাকীর কাছে রুকাইয়া নিন।</li>
+        <li>✅ প্রথমত জ্বীন রুকাইয়া চেকার দ্বারা জ্বীনে আক্রান্ত হআার সম্ভাবনা জেনে নিন। </li>
+        <li>✅ দ্বিতীয়ত সুরা ফালাক, সুরা নাস ও আয়াতুল কুরসী দিয়ে রুকাইয়া করুন।</li>
+        <li>✅ যদি তাতেও কাজ না হয় একজন রাকীর কাছে জ্বীনের রুকাইয়া নিন।</li>
     </ul>
 </div>
 
