--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     </form>
     <button onclick="submitQuiz()">সাবমিট করুন </button>
     <div id="result"></div>
+    <h3>আপনার সমস্যা সমূহ ⤵️</h3>
     <ul id="responseList"></ul>
+    <h3>জ্বীনের রুকাইয়া সমূহ ⤵️</h3>
     <ul class="List">
         <li>✅ প্রথমত জ্বীন রুকাইয়া চেকার দ্বারা জ্বীনে আক্রান্ত হবার সম্ভাবনা জেনে নিন। </li>
         <li>✅ দ্বিতীয়ত সুরা ফালাক, সুরা নাস ও আয়াতুল কুরসী দিয়ে রুকাইয়া করুন।</li>
