--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Centered Transparent Square Buttons</title>
+<title>রুকাইয়া চেকার</title>
 <style>
     html, body {
         height: 100%;
@@ -57,14 +57,14 @@
 </head>
 <body>
 <div class="container">
-    <h1>Centered Transparent Square Buttons</h1>
+    <h1>রুকাইয়া চেকার</h1>
     <div class="button-group">
-        <button>Button 1</button>
-        <button>Button 2</button>
+        <button>জ্বীন সমস্যা </button>
+        <button>যাদু সমস্যা </button>
     </div>
     <div class="button-group">
-        <button>Button 3</button>
-        <button>Button 4</button>
+        <button>বদ নজর</button>
+        <button>ওয়াসওয়াসা</button>
     </div>
 </div>
 </body>
