--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <div class="container">
     <h1>রুকাইয়া চেকার</h1>
     <div class="button-group">
-        <button>জ্বীন সমস্যা </button>
+        <a href="jin/index.html" target="blank"><button>জ্বীন সমস্যা </button></a>
         <button>যাদু সমস্যা </button>
     </div>
     <div class="button-group">
