--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>রুকাইয়া চেকার</title>
+<title>স্মার্ট রুকাইয়া চেকার</title>
 <style>
     html, body {
         height: 100%;
@@ -57,7 +57,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>রুকাইয়া চেকার</h1>
+    <h1>স্মার্ট রুকাইয়া চেকার</h1>
     <div class="button-group">
         <a href="jin/index.html" target="blank"><button>জ্বীন সমস্যা </button></a>
         <button>যাদু সমস্যা </button>
