--- a/index.html
+++ b/index.html
@@ -53,6 +53,17 @@
         background-color: rgba(0, 123, 255, 0.3); /* Semi-transparent blue on hover */
         border-color: #007bff; /* Blue border on hover */
     }
+    .List {
+    margin-top: 20px;
+    padding: 10px;
+    background-color: #6c757d; /* Bootstrap secondary color */
+    border: 1px solid #6c757d;
+    border-radius: 4px;
+    list-style-type: none;
+    max-height: 200px; /* Limit height for overflow */
+    overflow-y: auto; /* Enable vertical scrolling */ 
+}
+    
 </style>
 </head>
 <body>
