--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
 <body>
 <div class="container">
     <h1>স্মার্ট রুকাইয়া চেকার</h1>
+    <hr>
+    <br>
     <div class="button-group">
         <a href="jin/index.html" target="blank"><button>জ্বীন সমস্যা </button></a>
         <button>যাদু সমস্যা </button>
@@ -79,7 +81,7 @@
     </div>
     <br>
     <ul class="List">
-        <li>✅ প্রথমত জ্বীন রুকাইয়া চেকার দ্বারা জ্বীনে আক্রান্ত হবার সম্ভাবনা জেনে নিন। </li>
+        <li>✅ প্রথমত স্মার্ট রুকাইয়া চেকার দ্বারা যেকোন রোগের আক্রান্ত হবার সম্ভাবনা জেনে নিন। </li>
         <li>✅ দ্বিতীয়ত সুরা ফালাক, সুরা নাস ও আয়াতুল কুরসী দিয়ে রুকাইয়া করুন।</li>
         <li>✅ যদি তাতেও কাজ না হয় একজন রাকীর কাছে জ্বীনের রুকাইয়া নিন।</li>
         <li>✅ প্রয়োজনে হিজামা করুন।</li>
