--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
     <hr>
     <br><br>
     <div class="button-group">
-        <a href="jin/index.html" target="blank"><button>জ্বীন সমস্যা </button></a>
-        <button>যাদু সমস্যা </button>
+        <a href="jin/index.html" target="blank"><button> 👹 জ্বীন সমস্যা </button></a>
+        <button>🪄 যাদু সমস্যা </button>
     </div>
     <div class="button-group">
         <button>বদ নজর</button>
