--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <button>🪄 যাদু সমস্যা </button>
     </div>
     <div class="button-group">
-        <button>বদ নজর</button>
+        <button>👁️ বদ নজর</button>
         <button>ওয়াসওয়াসা</button>
     </div>
     <br>   
