--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
     <hr>
     <br><br>
     <div class="button-group">
-        <a href="jin/index.html" target="blank"><button> 👹 জ্বীন সমস্যা </button></a>
+        <a href="jin/index.html" target="blank"><button>👿 জ্বীন সমস্যা </button></a>
         <button>🪄 যাদু সমস্যা </button>
     </div>
     <div class="button-group">
         <button>👁️ বদ নজর</button>
-        <button>ওয়াসওয়াসা</button>
+        <button>👹 ওয়াসওয়াসা</button>
     </div>
     <br>   
 <div>
