--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </div>
     <div class="button-group">
         <button>👁️ বদ নজর</button>
-        <button>👹 ওয়াসওয়াসা</button>
+        <button>👹 কুমন্ত্রণা</button>
     </div>
     <br>   
 <div>
