--- a/index.html
+++ b/index.html
@@ -4,68 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>স্মার্ট রুকাইয়া চেকার</title>
-<style>
-    html, body {
-        height: 100%;
-        font-family: Arial, sans-serif;
-        background-color: #343a40; /* Dark background color */
-        color: #fff; /* Light text color */
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: 0;
-        padding: 0;
-    }
-
-    .container {
-        width: 80%;
-        max-width: 800px;
-        background-color: #495057; /* Darker background color */
-        padding: 20px;
-        border-radius: 8px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-        text-align: center;
-    }
-
-    h1 {
-        margin-bottom: 20px;
-    }
-
-    .button-group {
-        display: flex;
-        justify-content: center;
-        margin-bottom: 20px;
-    }
-
-    button {
-        width: 100px; /* Square button size */
-        height: 100px; /* Square button size */
-        margin: 5px; /* Adjust spacing between buttons */
-        background-color: transparent; /* Transparent background */
-        color: #fff;
-        border: 2px solid #fff; /* White border */
-        cursor: pointer;
-        border-radius: 4px;
-        transition: background-color 0.3s ease, border-color 0.3s ease; /* Smooth transitions */
-    }
-
-    button:hover {
-        background-color: rgba(0, 123, 255, 0.3); /* Semi-transparent blue on hover */
-        border-color: #007bff; /* Blue border on hover */
-    }
-    
-    .List {
-    margin-top: 20px;
-    padding: 10px;
-    background-color: #6c757d; /* Bootstrap secondary color */
-    border: 1px solid #6c757d;
-    border-radius: 4px;
-    list-style-type: none;
-    max-height: 200px; /* Limit height for overflow */
-    overflow-y: auto; /* Enable vertical scrolling */ 
-}
-    
-</style>
+<link rel="stylesheet" href="styles.css">  
 </head>
 <body>
 <div class="container">
