--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div>
     <h3>রুকাইয়া সমূহ</h3>
     <ul class="List">
-        <li>✅ প্রথমত স্মার্ট রুকাইয়া চেকার দ্বারা প্যারানরমাল রোগের আক্রান্ত হবার সম্ভাবনা জেনে নিন। </li>
+        <li>✅ প্রথমত স্মার্ট রুকাইয়া চেকার দ্বারা প্যারানরমাল রোগে আক্রান্ত হবার সম্ভাবনা জেনে নিন। </li>
         <li>✅ দ্বিতীয়ত কুরআনের সুরা বা রুকাইয়ার আয়াত দিয়ে রুকাইয়া করুন।</li>
         <li>✅ যদি তাতেও কাজ না হয় একজন রাকীর কাছে রুকাইয়া নিন।</li>
         <li>✅ প্রয়োজনে হিজামা করুন।</li>
