--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <br>
     <div class="button-group">
         <a href="jin/index.html" target="blank"><button>👻 জ্বীন সমস্যা </button></a>
-        <button>💀 যাদু সমস্যা </button>
+        <button>☠️ যাদু সমস্যা </button>
     </div>
     <div class="button-group">
         <button>👁️ বদ নজর</button>
